--- a/src/components/trending/tablecontainer/trendingtable/TrendingTable.css
+++ b/src/components/trending/tablecontainer/trendingtable/TrendingTable.css
@@ -11,7 +11,7 @@
 .trendingtable__wrapper .table__head--row th:nth-child(3),
 .trendingtable__wrapper .table__body--row td:nth-child(3) {
     background-color: var(--clr-table-row) !important;
-    left: 7%;
+    left: calc(2rem + 5px + 1.2rem + 5px);
     position: sticky;
     z-index: 999;
 }
@@ -21,7 +21,7 @@
 @media screen and (min-width: 576px) and (max-width: 768px) {
     .trendingtable__wrapper .table__head--row th:nth-child(3),
     .trendingtable__wrapper .table__body--row td:nth-child(3) {
-        left: 10%;
+        left: calc(2rem + 5px + 1.2rem + 7px);
     }
     .more__icon--wrapper {
         width: 2rem;
@@ -33,6 +33,6 @@
 @media screen and (max-width: 576px) {
     .trendingtable__wrapper .table__head--row th:nth-child(3),
     .trendingtable__wrapper .table__body--row td:nth-child(3) {
-        left: 10%;
+        left: calc(2rem + 5px + 1.2rem + 7px);
     }
 }
